# Camellia

./: .gitignore  .gitignore_global  .gitmodules  CMakeLists.txt  ConfigureOptions.cmake  FormatSourceFiles.sh  README  README.txt  SConscript  SConstruct  configure  doxygen.config
drivers/: CMakeLists.txt
drivers/Brendan/: CMakeLists.txt  LinearElasticity2D.cpp  LinearElasticity2D_challenge.cp  LinearElasticity3D.cpp  LinearElasticity3DGMG.cpp  Oldroyd-B.cpp  OldroydB.cpp  OldroydBDriver.cpp  StVenantKirchhoffElasticity3D.cpp
drivers/Burgers/: BurgersBilinearForm.cpp  BurgersDriver.cpp  BurgersInnerProduct.cpp  BurgersInnerProduct.h  BurgersProblem.cpp  CMakeLists.txt  SConstruct  TimeMarchingBurgersDriver.cpp  TimeMarchingBurgersProblem.h
drivers/ConditioningExperiment/: BlockKrylovSchurEpetraExFile.cpp  CMakeLists.txt  ConditioningExperimentDriver.cpp  LOBPCGEpetraExFile.cpp  LSQREpetraExFile.cpp  stokes_study_for_trilinos_discussion.mtx
drivers/Confusion/: AdaptiveConfusion.cpp  ConfectionBCConstraints.h  ConfectionManufacturedSolution.cpp  ConfectionManufacturedSolution.h  ConfectionProblem.h  ConfusionBilinearForm.cpp  ConfusionBilinearForm.h  ConfusionInnerProduct.h  ConfusionManufacturedSolution.cpp  ConfusionManufacturedSolution.h  ConfusionProblem.cpp  ConfusionProblemLegacy.cpp  ConfusionProblemLegacy.h  ConfusionStudy.cpp  EricksonConfectionSolution.cpp  EricksonDriver.cpp  EricksonManufacturedSolution.cpp  EricksonManufacturedSolution.h  EricksonProblem.h  ExperimentalInnerProduct.cpp  ExperimentalInnerProduct.h  SConscript  SConstruct  VortexDriver.cpp  VortexManufacturedSolution.cpp  VortexManufacturedSolution.h  VortexProblem.h
drivers/Confusion_Jesse/: AnisoTest.cpp  CMakeLists.txt  Confusion_Hughes.cpp  Confusion_step.cpp  ConvectionTest.cpp  FrontFacingStep.cpp  GalerkinOrthogonality.cpp  PlateTest.cpp  QoptInflowSchwabSuri.cpp  QoptInflowTest.cpp  RampTest.cpp  Rates.cpp  SConscript  SConstruct  SimpleTest.cpp  TraceBLTest.cpp  TransientTest.cpp  UnitScalingTest.cpp  Vortex.cpp  u.m
drivers/ConservativeConfusion/: AirfoilDriver.cpp  BuildHemkerMesh.h  CMakeLists.txt  ConfusionDriver.cpp  DoubleGlazingDriver.cpp  EricksonDriver.cpp  HemkerDriver.cpp  RotatingFieldDriver.cpp  SConscript  SConstruct  TransientHemker.cpp  VortexDriver.cpp
drivers/Convection/: CMakeLists.txt  ConvectingConeDriver.cpp  SpaceTimePrototypeConvectingConeDriver.cpp
drivers/DPGTests/: BasisCacheTests.cpp  BasisCacheTests.h  BasisReconciliationTests.cpp  BasisReconciliationTests.h  CMakeLists.txt  CellTopologyTests.cpp  CellTopologyTests.h  CurvilinearMeshTests.cpp  CurvilinearMeshTests.h  DPGTests.cpp  DPGTests.h  ElementTests.cpp  ElementTests.h  FunctionTests.cpp  FunctionTests.h  GDAMinimumRuleTests.cpp  GDAMinimumRuleTests.h  GMGTests.cpp  GMGTests.h  HConvergenceStudyTests.cpp  HConvergenceStudyTests.h  IncompressibleFormulationsTests.cpp  IncompressibleFormulationsTests.h  LinearTermTests.cpp  LinearTermTests.h  LobattoBasisTests.cpp  LobattoBasisTests.h  MPIWrapperTests.cpp  MPIWrapperTests.h  MeshRefinementTests.cpp  MeshRefinementTests.h  MeshTestSuite.cpp  MeshTestSuite.h  MeshTopologyTests.cpp  MeshTopologyTests.h  MultiBasisTests.cpp  MultiBasisTests.h  NewMeshTests.cpp  NewMeshTests.h  ParametricCurveTests.cpp  (+27 more)
drivers/DemoDrivers/: Laplace3DSingleElement.cpp  LaplaceCurvilinear.cpp  PoissonSolver.cpp
drivers/Euler/: CMakeLists.txt  DiamondAirfoil.cpp  EulerRamp.cpp  ForwardFacingStep.cpp  SteadyEulerRamp.cpp
drivers/HPCToolkitTest/: CMakeLists.txt  HPCToolkitTest.cpp  HPCToolkitTestSimple.cpp
drivers/IncompressibleNS/: CMakeLists.txt  NSFormulations.h  NavierStokesBackwardFacingStepDriver.cpp  NavierStokesCavityFlowContinuationAdaptive.cpp  NavierStokesCavityFlowContinuationFixedMesh.cpp  NavierStokesCavityFlowDriver.cpp  NavierStokesHemkerDriver.cpp  NavierStokesStudy.cpp  NavierStokesStudyModernFormulation.cpp  OseenStudy.cpp
drivers/LocalConservation/: AirfoilDriver.cpp  BasicConfusionDriver.cpp  BendDriver.cpp  CMakeLists.txt  ConfusionDriver.cpp  ConfusionProblem.cpp  ConfusionProblem.h  DiscontinuousSource.cpp  DoubleGlazingDriver.cpp  EricksonDriver.cpp  HemkerDriver.cpp  InviscidBurgers.cpp  LShapedPoisson.cpp  PoissonWedge.cpp  RotatingCylinder.cpp  SimpleConfusion.cpp  SimpleConvection.cpp  SingularWedge.cpp  SkewedInnerLayer.cpp  StandardConfusionDriver.cpp  StandardConfusionProblem.cpp  StandardConfusionProblem.h  TinyMesh.cpp  TransientConfusion.cpp  VortexDriver.cpp
drivers/MeshMemorySize/: CMakeLists.txt  MeshMemorySize.cpp
drivers/MultiOrderStudy/: MultiOrderStudy.cpp  MultiOrderStudy.h
drivers/NavierStokes/: CMakeLists.txt  CarterPlateProblem.cpp  NSDriver.cpp  NSRamp.cpp  NavierStokesBilinearForm.cpp  NavierStokesDriver.cpp  PlateVisualizer.cpp  RampDriver.cpp  SConscript  SConstruct
drivers/NonlinearTests/: CMakeLists.txt  InviscidBurgers.cpp  InviscidBurgersHessian.cpp
drivers/Poisson/: CMakeLists.txt  PoissonBCCubic.cpp  PoissonBCCubic.h  PoissonBCLinear.cpp  PoissonBCLinear.h  PoissonBCQuadratic.cpp  PoissonBCQuadratic.h  PoissonBCQuartic.cpp  PoissonBCQuartic.h  PoissonBilinearForm.cpp  PoissonBilinearForm.h  PoissonDriver1D.cpp  PoissonDriver2D.cpp  PoissonDriverBarkerAdditiveSchwarz.cpp  PoissonExactSolution.cpp  PoissonExactSolution.h  PoissonExactSolutionCubic.cpp  PoissonExactSolutionCubic.h  PoissonExactSolutionQuadratic.cpp  PoissonExample.cpp  PoissonGMGDriver.cpp  PoissonPreconditioningTestsDriver.cpp  PoissonRHSCubic.h  PoissonRHSLinear.cpp  PoissonRHSLinear.h  SConstruct  (+4 more)
examples/: CMakeLists.txt
tests/: BasisCacheTests.cpp  BasisCacheTests.h  CMakeLists.txt  ElementTests.cpp  ElementTests.h  FunctionTests.cpp  FunctionTests.h  LinearTermTests.cpp  LinearTermTests.h  LocalConservationTests.cpp  LocalConservationTests.h  MPIUnitTestResultPrinter.cpp  MPIUnitTestResultPrinter.h  MPIWrapperTests.cpp  MPIWrapperTests.h  MeshRefinementTests.cpp  MeshRefinementTests.h  MeshTests.cpp  MeshTests.h  ParallelUnitTestPrinter.cpp  ParallelUnitTestPrinter.h  TestUtil.h  TransientTests.cpp  TransientTests.h  main.cpp
(+1637 files in other folders)
